<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>loco_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo Simulation for LoCO</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>loco_description</exec_depend>
  <exec_depend>loco_pilot</exec_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
